--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To-do List App</title>
 </head>
 <body>
     
+<div class="appContainer">
+    <h2>Come and create your To-do List here</h2>
+    <form action="/tasks" method="post">
+        <input type="text" name="action" placeholder="Add a new task here">
+        <button> Add task </button>
+    </form>
+
+
+</div>
+
+
 </body>
 </html>
