--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,21 +9,27 @@
 <body>
     
 <div class="appContainer">
+
     <h2>Come and create your To-do List here</h2>
     <form action="/tasks" method="post" class="taskEntryContainer">
         <input type="text" name="action" placeholder="Add a new task here">
-        <button> Add task </button>
+        <button type="submit" name="button"> Add task </button>
     </form>
     <div class="taskListContainer">
         <ul class="taskList">
-            <% for (let i=0; i < tasksArray.length; i++) { %>
+            <% for (let i=0; i <tasksArray.length; i++){ %>
                 <li>
-                    <p>
-                        <%= tasksArray[i] %>
-                    </p>
+                    <span>
+                        <strong><%= tasksArray[i].action%></strong>
+                    </span>
+                    <span>
+                        <em><%= tasksArray[i].status%></em>
+                    </span>
+                    <span>
+                       ID: <%= tasksArray[i].id%>
+                    </span>
                 </li>
-            <% } <%>     
-            
+            <% } %>     
         </ul>
 
     </div>
