--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-do List App</title>
+    <link rel="stylesheet" href="../public/styles.css">
 </head>
 <body>
     
@@ -13,7 +14,7 @@
     <h2>Come and create your To-do List here</h2>
     <form action="/tasks" method="post" class="taskEntryContainer">
         <input type="text" name="action" placeholder= "Add a new task here">
-        <button type="submit" name="button"> Add task </button>
+        <button type="submit" name="button" class="submitBtn"> Add task </button>
     </form>
     <div class="taskListContainer">
             <% for (let i=0; i <tasksArray.length; i++){ %>
@@ -27,6 +28,10 @@
                     <span>
                        ID: <%= tasksArray[i].id%>
                     </span>
+            
+                    <form action="/tasks/remove" method="post">
+                        <button class="removeBtn" formaction="/tasks/remove" type="submit">Remove</button>
+                    </form>
                 </li>
             <% } %>     
         </ul>
