--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,32 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-do List App</title>
-    <link rel="stylesheet" href="../public/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     
 <div class="appContainer">
 
-    <h2>Come and create your To-do List here</h2>
+    <h1 class="title">Come and create your <em class="todoWord">To-do</em>  List here</h1>
     <form action="/tasks" method="post" class="taskEntryContainer">
         <input type="text" name="action" placeholder= "Add a new task here">
         <button type="submit" name="button" class="submitBtn"> Add task </button>
     </form>
     <div class="taskListContainer">
             <% for (let i=0; i <tasksArray.length; i++){ %>
-                <li>
-                    <span>
+                <li class="taskInline">
+                    <span class="action">
                         <strong><%= tasksArray[i].action%></strong>
                     </span>
-                    <span>
+                    <span class="status">
                         <em><%= tasksArray[i].status%></em>
                     </span>
-                    <span>
-                       ID: <%= tasksArray[i].id%>
+                    <span class="date">
+                      <%= tasksArray[i].date%>
                     </span>
             
-                    <form action="/tasks/remove" method="post">
-                        <button class="removeBtn" formaction="/tasks/remove" type="submit">Remove</button>
+                    <form action="/tasks/remove" method="post" class="rmvBtnDiv">
+                        <button class="removeBtn" formaction="/tasks/remove" type="submit">Delete</button>
                     </form>
                 </li>
             <% } %>     
